--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,8 @@
 	<title>Fermi Game Jam</title>
 </head>
 <body>
+	<script type="text/javascript" src="js/lib/socket.io-1.4.5.js"></script>
+	<script type="text/javascript" src="js/lib/peer.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
