--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,10 @@
 <body>
 	<script type="text/javascript" src="js/lib/socket.io-1.4.5.js"></script>
 	<script type="text/javascript" src="js/lib/peer.js"></script>
+	<script type="text/javascript" src="js/lib/EventEmitter.js"></script>
+	<script type="text/javascript" src="js/lib/es6-mapify.js"></script>
+	<script type="text/javascript" src="js/P2P.js"></script>
+	<script type="text/javascript" src="js/CivLogManager.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
