--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/lib/peer.js"></script>
 	<script type="text/javascript" src="js/lib/EventEmitter.js"></script>
 	<script type="text/javascript" src="js/lib/es6-mapify.js"></script>
+	<script type="text/javascript" src="js/lib/underscore-min.js"></script>
 	<script type="text/javascript" src="js/P2P.js"></script>
 	<script type="text/javascript" src="js/CivLogManager.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
