OMG DRAWING THE STARS

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,13 +4,21 @@
 	<title>Fermi Game Jam</title>
 </head>
 <body>
+	<div id='threejs-container'></div>
 	<script type="text/javascript" src="js/lib/socket.io-1.4.5.js"></script>
 	<script type="text/javascript" src="js/lib/peer.js"></script>
 	<script type="text/javascript" src="js/lib/EventEmitter.js"></script>
 	<script type="text/javascript" src="js/lib/es6-mapify.js"></script>
 	<script type="text/javascript" src="js/lib/underscore-min.js"></script>
+	<script type="text/javascript" src="js/lib/threex.windowresize.js"></script>
+	<script type="text/javascript" src="js/lib/three.min.js"></script>
+	<script type="text/javascript" src="js/lib/stats.min.js"></script>
+	<script type="text/javascript" src="js/lib/Detector.js"></script>
+	<script type="text/javascript" src="js/lib/FlyControls.js"></script>
+	<script type="text/javascript" src="js/lib/papaparse.js"></script>
 	<script type="text/javascript" src="js/P2P.js"></script>
 	<script type="text/javascript" src="js/CivLogManager.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/render.js"></script>
 </body>
 </html>
