styles; black background

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Fermi Game Jam</title>
+        <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<div id='threejs-container'></div>
