--- a/client/public/index.html
+++ b/client/public/index.html
@@ -17,8 +17,11 @@
 	<script type="text/javascript" src="js/lib/Detector.js"></script>
 	<script type="text/javascript" src="js/lib/FlyControls.js"></script>
 	<script type="text/javascript" src="js/lib/papaparse.js"></script>
+	
 	<script type="text/javascript" src="js/P2P.js"></script>
 	<script type="text/javascript" src="js/CivLogManager.js"></script>
+	<script type="text/javascript" src="js/CivLogFilter.js"></script>
+	<script type="text/javascript" src="js/Galaxy.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/render.js"></script>
 </body>
