Major front-end rewrites

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -44,6 +44,145 @@
 		  <li id="log-button"><a href="#">LOG</a></li>
 		  <li id="journal-button"><a href="#">JOURNAL</a></li>
 		</ul>
+		<div id="explore-container">
+			<div id="exploring-star-name">STAR NAME</div>
+			<div class="btn-group">
+				<button id="ping-peers-button" class="btn">PING PEERS</button>
+				<button id="chat-button" class="btn">CHAT</button>
+			</div>
+			<div id="explore-table-container">
+				<table id="explore" class="table table-condensed table-bordered">
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+					<tr>
+						<th>STAR SYSTEM</th>
+						<th>PEERS</th>
+					</tr>
+				</table>
+			</div>
+		</div>
 		<div id="journal hide">
 			<!--Planet forms with complex organic molecules...<br>
 			Water forms on Planet...<br>
@@ -71,7 +210,88 @@
 		    <th>Data</th>
 		  </tr>
 		</table>
+		<section id="ui-right-panel">
+			<div id="star-stats">
+				<div>MY STAR NAME</div>
+				<div><span id="num-chats">2</span> chats</div>
+				<div><span id="num-peers-connected">10</span> peers connected</div>
+				<div><span id="num-civlog-entries">1100</span> entries in civlog</div>
+				<div><span id="num-civs-contacted">180</span> civilizations known</div>
+				<div><span id="num-civs-contacted">20</span> civilizations contacted</div>
+			</div>
+			<div id="llog">
+				<div> &gt; pinging STAR NAME's 4 known peers...</div>
+				<div> &gt; 3 peers dead...</div>
+				<div> &gt; 1 peer alive.</div>
+				<div> &gt; connecting...</div>
+				<div> &gt; peer acknowledged.</div>
+				<div> &gt; sending civlog to peer...</div>
+				<div> &gt; received peer civlog.</div>
+				<div> &gt; 12 new civilizations discovered!</div>
+				<div> &gt; sent chat message to STAR NAME.</div>
+				<div> &gt; received chat message from STAR NAME.</div>
+				<div> &gt; communication to STAR NAME has ceased.</div>
+				<div> &gt; marking civilization death for STAR NAME in civlog.</div>
+			</div>
+			<div id="chat">
+				<div id="chat-star-name">STAR NAME</div>
+				<div id="chat-body">
+					<div class="chat-message chat-me">
+						Hello
+					</div>
+					<div class="chat-message chat-them">
+						Hi
+					</div>
+					<div class="chat-message chat-me">
+						What is this?
+					</div>
+						<div class="chat-message chat-me">
+						I have no idea. I think its some sort of weird ass game...
+					</div>
+					<div class="chat-message chat-them">
+						Hi
+					</div>
+					<div class="chat-message chat-me">
+						What is this?
+					</div>	<div class="chat-message chat-me">
+						Hello
+					</div>
+					<div class="chat-message chat-them">
+						Hi
+					</div>
+					<div class="chat-message chat-me">
+						What is this?
+					</div>	<div class="chat-message chat-me">
+						Hello
+					</div>
+					<div class="chat-message chat-them">
+						Hi
+					</div>
+					<div class="chat-message chat-me">
+						What is this?
+					</div>	<div class="chat-message chat-me">
+						Hello
+					</div>
+					<div class="chat-message chat-them">
+						Hi
+					</div>
+					<div class="chat-message chat-me">
+						What is this?
+					</div>	<div class="chat-message chat-me">
+						Hello
+					</div>
+					<div class="chat-message chat-them">
+						Hi
+					</div>
+					<div class="chat-message chat-me">
+						What is this?
+					</div>
+				</div>
+				<textarea id="chat-input" rows="3"></textarea>
+			</div>
+		</section>
 	</div>
+
 
 	<div id='threejs-container'></div>
 	<script type="text/javascript" src="js/lib/jquery-3.1.0.min.js"></script>
