name generator skeleton + pseudo bayer

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
 <body>
 
 	<div id='ui-container'>
-		
+
 		<ul id="menu" class="nav nav-pills">
 		  <li id="explore-button" class="active"><a href="#">EXPLORE</a></li>
 		  <li id="communicate-button"><a href="#">COMMUNICATE</a></li>
@@ -66,7 +66,7 @@
  		  <tr>
 		    <th>Date</th>
 		    <th>Type</th>
-		    <th>To</th> 
+		    <th>To</th>
 		    <th>From</th>
 		    <th>Data</th>
 		  </tr>
@@ -90,6 +90,7 @@
 	<script type="text/javascript" src="js/P2P.js"></script>
 	<script type="text/javascript" src="js/CivLogManager.js"></script>
 	<script type="text/javascript" src="js/CivLogFilter.js"></script>
+	<script type="text/javascript" src="js/NameGenerator.js"></script>
 	<script type="text/javascript" src="js/Galaxy.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/render.js"></script>
