--- a/client/public/index.html
+++ b/client/public/index.html
@@ -186,24 +186,6 @@
 					</div>
 				</div>
 			</section>
-			<div id="journal hide">
-				<!--Planet forms with complex organic molecules...<br>
-				Water forms on Planet...<br>
-				Nearby collision creates a barage of meteiroids close to planet...<br>
-				Impact events create thermal flux resulting in early biotic life...<br>
-				Cells resembling prokaryotes appear...<br>
-				Atmospheric oxygen accumulates...<br>
-				Prolonged photosynthesis...<br>
-				Eukaryotes evolve into mult-cellular organisms...<br>
-				Intelligence arises...<br>
-				Language develops...<br>
-				Coordinated space exploration begins...<br>
-				Life found on nearby planets...<br>
-				Star system colonized...<br>
-				Scientific discovery leads to Faster-than-light communication...<br>
-				Search for Extra-Stellar Intelligence begins in earnest...<br><br>
-				...Contact.-->
-			</div>
 <!-- 			<table id="log" class="table table-condensed table-bordered hide">
 	 		  <tr>
 			    <th>Date</th>
@@ -214,7 +196,78 @@
 			  </tr>
 			</table> -->
 			<section id="ui-middle-panel">
-				jsodijfoasjdfoajsdf
+				<div id="middle-container">
+					<div id="journal">
+						Planet forms with complex organic molecules...<br>
+						Water forms on Planet...<br>
+						Nearby collision creates a barage of meteiroids close to planet...<br>
+						Impact events create thermal flux resulting in early biotic life...<br>
+						Cells resembling prokaryotes appear...<br>
+						Atmospheric oxygen accumulates...<br>
+						Prolonged photosynthesis...<br>
+						Eukaryotes evolve into mult-cellular organisms...<br>
+						Intelligence arises...<br>
+						Language develops...<br>
+						Coordinated space exploration begins...<br>
+						Life found on nearby planets...<br>
+						Star system colonized...<br>
+						Scientific discovery leads to Faster-than-light communication...<br>
+						Search for Extra-Stellar Intelligence begins in earnest...<br><br>
+						...Contact.
+
+							Planet forms with complex organic molecules...<br>
+						Water forms on Planet...<br>
+						Nearby collision creates a barage of meteiroids close to planet...<br>
+						Impact events create thermal flux resulting in early biotic life...<br>
+						Cells resembling prokaryotes appear...<br>
+						Atmospheric oxygen accumulates...<br>
+						Prolonged photosynthesis...<br>
+						Eukaryotes evolve into mult-cellular organisms...<br>
+						Intelligence arises...<br>
+						Language develops...<br>
+						Coordinated space exploration begins...<br>
+						Life found on nearby planets...<br>
+						Star system colonized...<br>
+						Scientific discovery leads to Faster-than-light communication...<br>
+						Search for Extra-Stellar Intelligence begins in earnest...<br><br>
+						...Contact.
+
+							Planet forms with complex organic molecules...<br>
+						Water forms on Planet...<br>
+						Nearby collision creates a barage of meteiroids close to planet...<br>
+						Impact events create thermal flux resulting in early biotic life...<br>
+						Cells resembling prokaryotes appear...<br>
+						Atmospheric oxygen accumulates...<br>
+						Prolonged photosynthesis...<br>
+						Eukaryotes evolve into mult-cellular organisms...<br>
+						Intelligence arises...<br>
+						Language develops...<br>
+						Coordinated space exploration begins...<br>
+						Life found on nearby planets...<br>
+						Star system colonized...<br>
+						Scientific discovery leads to Faster-than-light communication...<br>
+						Search for Extra-Stellar Intelligence begins in earnest...<br><br>
+						...Contact.
+
+							Planet forms with complex organic molecules...<br>
+						Water forms on Planet...<br>
+						Nearby collision creates a barage of meteiroids close to planet...<br>
+						Impact events create thermal flux resulting in early biotic life...<br>
+						Cells resembling prokaryotes appear...<br>
+						Atmospheric oxygen accumulates...<br>
+						Prolonged photosynthesis...<br>
+						Eukaryotes evolve into mult-cellular organisms...<br>
+						Intelligence arises...<br>
+						Language develops...<br>
+						Coordinated space exploration begins...<br>
+						Life found on nearby planets...<br>
+						Star system colonized...<br>
+						Scientific discovery leads to Faster-than-light communication...<br>
+						Search for Extra-Stellar Intelligence begins in earnest...<br><br>
+						...Contact.
+					</div>
+				</div>
+
 			</section>
 			<section id="ui-right-panel">
 				<div id="star-stats">
