Hide journal for now

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -58,130 +58,6 @@
 								<th>STAR SYSTEM</th>
 								<th>PEERS</th>
 							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
-							<tr>
-								<th>STAR SYSTEM</th>
-								<th>PEERS</th>
-							</tr>
 						</table>
 					</div>
 				</div>
@@ -197,7 +73,7 @@
 			</table> -->
 			<section id="ui-middle-panel">
 				<div id="middle-container">
-					<div id="journal">
+					<!--<div id="journal">
 						Planet forms with complex organic molecules...<br>
 						Water forms on Planet...<br>
 						Nearby collision creates a barage of meteiroids close to planet...<br>
@@ -214,64 +90,13 @@
 						Scientific discovery leads to Faster-than-light communication...<br>
 						Search for Extra-Stellar Intelligence begins in earnest...<br><br>
 						...Contact.
-
-							Planet forms with complex organic molecules...<br>
-						Water forms on Planet...<br>
-						Nearby collision creates a barage of meteiroids close to planet...<br>
-						Impact events create thermal flux resulting in early biotic life...<br>
-						Cells resembling prokaryotes appear...<br>
-						Atmospheric oxygen accumulates...<br>
-						Prolonged photosynthesis...<br>
-						Eukaryotes evolve into mult-cellular organisms...<br>
-						Intelligence arises...<br>
-						Language develops...<br>
-						Coordinated space exploration begins...<br>
-						Life found on nearby planets...<br>
-						Star system colonized...<br>
-						Scientific discovery leads to Faster-than-light communication...<br>
-						Search for Extra-Stellar Intelligence begins in earnest...<br><br>
-						...Contact.
-
-							Planet forms with complex organic molecules...<br>
-						Water forms on Planet...<br>
-						Nearby collision creates a barage of meteiroids close to planet...<br>
-						Impact events create thermal flux resulting in early biotic life...<br>
-						Cells resembling prokaryotes appear...<br>
-						Atmospheric oxygen accumulates...<br>
-						Prolonged photosynthesis...<br>
-						Eukaryotes evolve into mult-cellular organisms...<br>
-						Intelligence arises...<br>
-						Language develops...<br>
-						Coordinated space exploration begins...<br>
-						Life found on nearby planets...<br>
-						Star system colonized...<br>
-						Scientific discovery leads to Faster-than-light communication...<br>
-						Search for Extra-Stellar Intelligence begins in earnest...<br><br>
-						...Contact.
-
-							Planet forms with complex organic molecules...<br>
-						Water forms on Planet...<br>
-						Nearby collision creates a barage of meteiroids close to planet...<br>
-						Impact events create thermal flux resulting in early biotic life...<br>
-						Cells resembling prokaryotes appear...<br>
-						Atmospheric oxygen accumulates...<br>
-						Prolonged photosynthesis...<br>
-						Eukaryotes evolve into mult-cellular organisms...<br>
-						Intelligence arises...<br>
-						Language develops...<br>
-						Coordinated space exploration begins...<br>
-						Life found on nearby planets...<br>
-						Star system colonized...<br>
-						Scientific discovery leads to Faster-than-light communication...<br>
-						Search for Extra-Stellar Intelligence begins in earnest...<br><br>
-						...Contact.
-					</div>
+					</div>-->
 				</div>
 
 			</section>
 			<section id="ui-right-panel">
 				<div id="star-stats">
-					<div>MY STAR NAME</div>
+					<div id="my-star-name">MY STAR NAME</div>
 					<div><span id="num-chats">2</span> chats</div>
 					<div><span id="num-peers-connected">10</span> peers connected</div>
 					<div><span id="num-civlog-entries">1100</span> entries in civlog</div>
@@ -381,9 +206,9 @@
 	<script type="text/javascript" src="js/CivLogFilter.js"></script>
 	<script type="text/javascript" src="js/NameGenerator.js"></script>
 	<script type="text/javascript" src="js/Galaxy.js"></script>
+	<script type="text/javascript" src="js/UI.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/render.js"></script>
 	<script type="text/javascript" src="js/ui.js"></script>
-
 </body>
 </html>
