--- a/client/public/index.html
+++ b/client/public/index.html
@@ -206,6 +206,7 @@
 	<script type="text/javascript" src="js/CivLogFilter.js"></script>
 	<script type="text/javascript" src="js/NameGenerator.js"></script>
 	<script type="text/javascript" src="js/Galaxy.js"></script>
+	<script type="text/javascript" src="js/GameState.js"></script>
 	<script type="text/javascript" src="js/UI.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/render.js"></script>
